maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:7: error: ';' expected but 'if' found.
     }if (!estFaceMur){
      ^